<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    
    <RadioGroup
            android:id="@+id/main_radio_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
             >
            <RadioButton
                android:id="@+id/main_tab_collect"
                style="@style/main_tab_bottom"
                android:checked="true"
                android:text="@string/main_radio_collect" />
            <RadioButton
                android:id="@+id/main_tab_search"
                style="@style/main_tab_bottom"
                android:text="@string/main_radio_search" />
            <RadioButton
                android:id="@+id/main_tab_data"
                style="@style/main_tab_bottom"
                android:text="@string/main_radio_data" />
        </RadioGroup>
    
    
    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_above="@id/main_radio_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>
